# Projects

BankingSystem/BankSystem/BankSystem/: banking.cpp  banking.hpp
BankingSystem/BankSystem/BankSystem/include/: account.hpp
BankingSystem/BankSystem/BankSystem/src/: account.cpp  main.cpp
Primes/: CMakeLists.txt  Readme.md  pbuild.sh
Primes/app/: CMakeLists.txt
Primes/app/src/: main.cpp
Primes/lib/: CMakeLists.txt
Primes/lib/include/: primes.hpp
Primes/lib/src/: primes.cpp
Primes/tests/: CMakeLists.txt
Primes/tests/test1/: CMakeLists.txt  test.cpp
SnakeTheGame/SnakeTheGame/SnakeTheGame/: main.cpp
Test/: CMakeLists.txt  main.cpp
